# lidar-slam-detection

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  VERSION  setup.py
freespace_detection/: .gitignore  CMakeLists.txt  freespace_detection.cc  freespace_detection.h  freespace_detection.py  freespace_detection_wrapper.cpp  freespace_detection_wrapper.h  generate_proto.sh
freespace_detection/coarse_segmentation/: coarse_segmentation.cc  coarse_segmentation.h
freespace_detection/common/: common.cc  common.h  parameters.h  types.h
freespace_detection/params/: freespace_detection_param.json
freespace_detection/preprocess/: preprocess.cc  preprocess.h
freespace_detection/remove_ground/: patch_ground_plane_fiting.cc  patch_ground_plane_fiting.h
hardware/gstreamer/plugins/: CMakeLists.txt
hardware/gstreamer/plugins/flir-driver/: CMakeLists.txt  spinnaker_camera_wrapper.cpp  spinnaker_camera_wrapper.h  video_capture.h  video_capture_spinnaker.cpp
hardware/gstreamer/plugins/gst-flir-src/: CMakeLists.txt  gstflirsrc.cpp  gstflirsrc.h
hardware/gstreamer/plugins/gst-opencv-remap/: CMakeLists.txt  gstopencvremap.cpp  gstopencvremap.h
proto/: .gitignore  CMakeLists.txt  README.md  detection.proto  detection_pb2.py  generate_proto.sh  internal.proto  internal_pb2.py  proto_serialize.py
sensor_driver/: .gitignore  CMakeLists.txt
sensor_driver/calibration/: CMakeLists.txt  calib_driver.py  calib_wrapper.cpp
sensor_driver/calibration/lidar_imu/include/: calib_lidar_imu.h
sensor_driver/calibration/lidar_imu/src/: calib_lidar_imu.cpp
sensor_driver/calibration/lidar_ins/include/: aligner.h  sensor.h  transform.h
sensor_driver/calibration/lidar_ins/src/: aligner.cpp  sensor.cpp
sensor_driver/common_lib/: CMakeLists.txt  cpp_utils.py  iou3d_nms.py
sensor_driver/common_lib/cpp_utils/: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.h  SystemUtils.cpp  SystemUtils.h  Transform.h  Types.h  UTMProjector.cpp  UTMProjector.h  Utils.cpp  Utils.h  all.cpp
sensor_driver/common_lib/iou3d_nms/: CMakeLists.txt  iou3d_cpu.cpp  iou3d_cpu.h  iou3d_nms.h  iou3d_nms_api.cpp  iou3d_nms_kernel.cu
sensor_driver/common_lib/logging/: CMakeLists.txt  InterProcess.cpp  InterProcess.h  Logger.cpp  Logger.h
sensor_driver/common_lib/logging/message/: CMakeLists.txt  __init__.py  (+4 more)
sensor_driver/common_lib/network_driver/: CMakeLists.txt  SerialDriver.cpp  SerialDriver.h  UDPServer.cpp  UDPServer.h  UnixSocket.cpp  UnixSocket.h
sensor_driver/inference/: CMakeLists.txt  all.cpp  inference.h  inference.py  iou3d_nms.py
sensor_driver/inference/iou3d_nms/: CMakeLists.txt  iou3d_cpu.cpp  iou3d_cpu.h  iou3d_nms.h  iou3d_nms_api.cpp  iou3d_nms_kernel.cu
sensor_driver/inference/rknn/: lidar_inference.cpp  lidar_inference.h
sensor_driver/inference/tensorRT/: lidar_inference.cpp  lidar_inference.h  tensorrt.cpp  tensorrt.hpp
sensor_driver/inference/voxelize/: CMakeLists.txt  preprocess.hpp  preprocess_kernel.cu  voxelization.hpp  voxelization_kernel.cu
sensor_driver/ins_driver/: CMakeLists.txt  ins_driver.py  ins_driver_wrapper.cpp
sensor_driver/ins_driver/include/: ins_driver.h
sensor_driver/ins_driver/src/: ins_driver.cpp
sensor_driver/lidar_driver/: CMakeLists.txt  lidar_driver.py  lidar_driver_wrapper.cpp
sensor_driver/lidar_driver/include/: DecoderBase.h  LidarScan.h  Types.h  lidar_driver.h  rs_decode_difop.h
sensor_driver/lidar_driver/src/: LidarScan.cpp  lidar_driver.cpp  rs_decode_difop.cpp
sensor_driver/point2voxel/: all.cpp  point2voxel.h  point2voxel.py
sensor_driver/point2voxel/voxelize/: CMakeLists.txt  voxelization.hpp  voxelization_kernel.cu
sensor_driver/radar_driver/: CMakeLists.txt  radar_driver.py  radar_driver_wrapper.cpp
sensor_driver/radar_driver/include/: radar_driver.h  radar_frame.h  radar_types.h
sensor_driver/radar_driver/src/: radar_driver.cpp  radar_frame.cpp
slam/: .gitignore  CMakeLists.txt  map_manager.py  slam.py
slam/backend/: backend_api.h
slam/backend/hdl_graph_slam/: CMakeLists.txt
slam/cmake/: FindOpenCV2.cmake  FindRKNN.cmake
slam/common/: CMakeLists.txt  keyframe.cpp  keyframe.h  mapping_types.h  pcd_writer.cpp  pcd_writer.h  slam_base.h  slam_utils.cpp  slam_utils.h
slam/common/DBoW2/: CMakeLists.txt
slam/common/Scancontext/: KDTreeVectorOfVectorsAdaptor.h  Scancontext.cpp  Scancontext.h
slam/localization/: CMakeLists.txt  localization_base.h
slam/localization/hdl_localization/: hdl_localization.cpp  hdl_localization.h
slam/localization/include/: global_alignment.hpp  global_localization.h  localization.h  map_loader.h  overlap_merge.hpp  overlap_removal.hpp  overlap_update.hpp
slam/localization/map_render/: CMakeLists.txt  camera_model.cpp  camera_model.h  colmap_utils.cpp  colmap_utils.h  image_render.hpp  map_render.cpp  map_render.h  render_common.h
slam/localization/src/: global_localization.cpp  localization.cpp  map_loader.cpp
slam/mapping/fastlio/: CMakeLists.txt
slam/mapping/floam/: CMakeLists.txt
slam/mapping/gicpm/: CMakeLists.txt
slam/mapping/rtkm/: CMakeLists.txt
slam/src/: graph_utils.cpp  graph_utils.h  py_utils.cpp  py_utils.h  slam.cpp  slam.h  slam_wrapper.cpp
slam/vio/: CMakeLists.txt
slam/vio/include/: common_lib.h  so3_math.h  tools_eigen.hpp  tools_kd_hash.hpp  visual_odometry.h
slam/vio/rgb_map/: image_frame.cpp  image_frame.hpp  pointcloud_rgbd.cpp  pointcloud_rgbd.hpp  rgbmap_tracker.cpp  rgbmap_tracker.hpp
slam/vio/src/: visual_odometry.cpp
tools/pkl_to_rosbag/: CMakeLists.txt  README.md
tools/pkl_to_rosbag/include/: GetPklData.h
tools/pkl_to_rosbag/rosbag_writter/: CMakeLists.txt
tools/pkl_to_rosbag/src/: GetPklData.cpp  main.cpp
tools/recv_sample/: CMakeLists.txt  README.md  recv_detection_udp.cpp  recv_localization_udp.cpp
tools/recv_sample/network/: UDPServer.cpp  UDPServer.h
tools/rosbag_to_pkl/: CMakeLists.txt  README.md  config.yaml  config_kitti.yaml  config_ulhk.yaml  config_utbm.yaml
tools/rosbag_to_pkl/include/: Utils.h
tools/rosbag_to_pkl/rosbag_reader/: CMakeLists.txt
tools/rosbag_to_pkl/src/: Utils.cpp  main.cpp
(+687 files in other folders)
